2005-01-26 20:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdapt) removed the project argument from
	adapt. Nodes will always be projected from now on.

2005-01-26 19:55 Mike Park  <mike.park@nasa.gov>

	* WARNING: continuing effort to merge unit mesh research path
	with production path. I have uncovered a few inconsistancies.
	It is suggested that you use last release (1.2.4) for production
	work.
	* src/gridinsert.c removed the last of SURFACE_VALIDITY #def's
	* src/Makfile.am removed libUnitMesh.a, unit_main uses standard 
	libMesherX.a

2005-01-26 19:05 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridAR) use correct cost constraints indicated
	by gridCostConstraint.

2005-01-26 17:26 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCostConstraint,gridSetCostConstraint) added
	methods to allow the cost metric constraints to changed on the fly.

2005-01-26 13:20 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSearchUV) Renamed from gridOptimizeUV to
	be more specific about the the method of optimization. Rewrote
	This method to optimize face mean ratio in mapped space with the
	constraint of maintaining a minimum gridAR. The old method moved
	the face node to improve gridAR directly. This simplifys
	gridSmoothNode by removing #defs and extra logic.

2005-01-26 10:20 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSearchT) Renamed from gridOptimizeT to
	be more specific about the the method of optimization. Rewrote
	This method to optimize edge `lengths' in mapped space with
	the constraint of maintaining a minimum gridAR. The old method
	moved the edge node to improve gridAR directly. This simplified
	gridSmoothNode.

2005-01-25 21:55 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.4 Release. ** internal release ** to save stable
	snapshot before merging the -DSURFACE_VALIDITY path into
	the mainline code.

2004-11-23 10:56 Mike Park  <mike.park@nasa.gov>
