@@ -24,7 +24,7 @@ class RubyExtensionBuilder
   requiredPackages['GridSwap'] = %w{ Adj Line Grid GridMath GridShape GridMetric }
   requiredPackages['GridCAD'] = %w{ Adj Line Grid GridMath GridShape GridMetric }
   requiredPackages['GridInsert'] = %w{ Adj Line Grid GridMath GridShape GridMetric GridSwap GridCAD }
-  requiredPackages['GridMPI'] = %w{ Adj Line Sort Queue Grid GridMath GridShape GridMetric GridInsert GridSwap }
+  requiredPackages['GridMPI'] = %w{ Adj Line Sort Queue Grid GridMath GridShape GridMetric GridCAD GridInsert GridSwap }
   requiredPackages['GridMove'] = %w{ Adj Line Grid GridMath GridShape GridMetric }
   requiredPackages['Layer'] = %w{ Adj Near Intersect Line Grid GridMath GridShape GridMetric GridCAD GridInsert }
 
